# FirmNetter

./: Cargo.toml  README.md  build.bat  build.rs  build.sh  build_release.bat  build_release.sh  cbindgen.toml  change.py  clean_build.bat  clean_build.sh  clean_build_release.bat  clean_build_release.sh
src/: ai.rs  devices_id.rs  flash_phone.rs  kernel.rs  lib.rs  list.rs  safe.rs  sql.rs  utils.rs  web.rs
