[package]
name = "firm_netter"
version = "0.1.11"
edition = "2024"
description = "测试，请勿使用！"
repository = "https://github.com/fghdfjhgj/lib_rust"
documentation = "https://github.com/fghdfjhgj/lib_rust/blob/main/README.md"
license = "Apache-2.0"
[lib]
#rclib
crate-type = ["cdylib","rlib","staticlib"]



[dependencies]
#rustls-tls or native-tls
reqwest = { version = "0.12.15", features = ["blocking", "json", "stream", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
encoding_rs = "0.8.35"
crossbeam = "0.8.4"
rayon = "1.10.0"
once_cell = "1.21.3"
memmap2 = "0.9.5"
percent-encoding = "2.3.1"

[build-dependencies]
cbindgen = "0.29.0"

[profile.dev]
opt-level = 0  # 不优化，加快编译速度
debug = true   # 包含调试信息


# 发布环境配置
[profile.release]
opt-level = 3  # 最高优化级别
debug = false  # 不包含调试信息

# 启用 clippy 检查（可选但推荐）
[package.metadata.clippy]
# 所有 clippy lints 视为警告
# 可改为 deny = ["all"] 使所有 lints 成为错误
warn = ["all"]

