[package]
name = "firm_netter"
version = "0.1.14"
edition = "2024"
description = "测试，请勿使用！"
repository = "https://github.com/fghdfjhgj/lib_rust"
documentation = "https://github.com/fghdfjhgj/lib_rust/blob/main/README.md"
license = "GPL-3"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
base64 = "0.22.1"
crossbeam = "0.8.4"
encoding_rs = "0.8.35"
hex = "0.4.3"
memmap2 = "0.9.5"
once_cell = "1.21.3"
# 默认不启用任何特性
openssl = { version = "0.10.73", default-features = false }
percent-encoding = "2.3.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0-rc.0"
thiserror = "2.0.12"

# 非 Android 平台启用 vendored
[target.'cfg(not(target_os = "android"))'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

# Android 平台不启用 vendored，使用预编译库
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10.73", default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"


[build-dependencies]
cbindgen = "0.29.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
codegen-units = 16
panic = "unwind"
incremental = true

# Clippy 配置（可选）
[package.metadata.clippy]
warn = ["all"]
deny = ["all"]
